--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -23,7 +23,8 @@
 
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="login-styles.css">
 </head>
 
 <body>
@@ -81,9 +82,6 @@
         <!-- Social login buttons -->
         <div class="d-grid gap-3">
           <a href="/auth/google" class="btn btn-outline-dark"><i class="fab fa-google"></i> Login with Google</a>
-          <button type="button" class="btn btn-outline-primary"><i class="fab fa-facebook"></i> Login with
-            Facebook</button>
-          <button type="button" class="btn btn-outline-secondary"><i class="fab fa-apple"></i> Login with Apple</button>
         </div>
 
         <!-- Sign up -->
