--- a/public/admin/admin-styles.css
+++ b/public/admin/admin-styles.css
@@ -2,373 +2,372 @@
 
 html,
 body {
-    height: 100%;
-    /* Make sure the html and body take full height */
+  height: 100%;
+  /* Make sure the html and body take full height */
 }
 
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f8f9fa;
-    /* Light background for the entire page */
-    display: flex;
-    /* Use Flexbox layout */
-    flex-direction: column;
-    /* Stack children vertically */
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f8f9fa;
+  /* Light background for the entire page */
+  display: flex;
+  /* Use Flexbox layout */
+  flex-direction: column;
+  /* Stack children vertically */
 }
 
 /* Header Styles */
 .dashboard-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #007bff;
-    /* Header color */
-    padding: 15px 20px;
-    color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #007bff;
+  /* Header color */
+  padding: 15px 20px;
+  color: white;
 }
 
 /* Sidebar Styles */
 .dashboard-sidebar {
-    width: 220px;
-    /* Set width for sidebar */
-    background-color: #343a40;
-    /* Sidebar background color */
-    color: white;
-    position: fixed;
-    /* Fixed positioning to stay in place */
-    height: 100%;
-    /* Full height */
-    padding-top: 20px;
-    /* Padding for sidebar */
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
-    /* Shadow for depth */
+  width: 220px;
+  /* Set width for sidebar */
+  background-color: #343a40;
+  /* Sidebar background color */
+  color: white;
+  position: fixed;
+  /* Fixed positioning to stay in place */
+  height: 100%;
+  /* Full height */
+  padding-top: 20px;
+  /* Padding for sidebar */
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+  /* Shadow for depth */
 }
 
 .dashboard-sidebar ul {
-    list-style: none;
-    /* Remove default list styling */
-    padding: 0;
-    /* Remove padding */
-    margin: 0;
-    /* Remove margin */
+  list-style: none;
+  /* Remove default list styling */
+  padding: 0;
+  /* Remove padding */
+  margin: 0;
+  /* Remove margin */
 }
 
 .dashboard-sidebar ul li {
-    padding: 10px 20px;
-    /* Padding for each item */
+  padding: 10px 20px;
+  /* Padding for each item */
 }
 
 .dashboard-sidebar ul li a {
-    color: white;
-    text-decoration: none;
-    display: block;
-    transition: background-color 0.3s;
+  color: white;
+  text-decoration: none;
+  display: block;
+  transition: background-color 0.3s;
 }
 
 .dashboard-sidebar ul li a:hover {
-    background-color: #495057;
+  background-color: #495057;
 }
 
 .wrapper {
-    margin-left: 240px;
-    padding: 20px;
-    flex: 1;
-    min-height: 95vh;
+  margin-left: 240px;
+  padding: 20px;
+  flex: 1;
+  min-height: 95vh;
 }
 
 /* Dashboard Styles */
 
 .dashboard-content {
-    display: inline;
+  display: inline;
 }
 
 .dashboard-logout-button {
-    display: inline-block;
-    background-color: #dc3545;
-    color: white;
-    padding: 10px 20px;
-    border-radius: 5px;
-    text-decoration: none;
-    text-align: center;
-    font-weight: bold;
-    transition: background-color 0.3s;
+  display: inline-block;
+  background-color: #dc3545;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  text-align: center;
+  font-weight: bold;
+  transition: background-color 0.3s;
 }
 
 .dashboard-logout-button:hover {
-    background-color: #c82333;
+  background-color: #c82333;
 }
 
 .dashboard-breadcrumbs {
-    padding: 10px 0px;
+  padding: 10px 0px;
 }
 
 .dashboard-home-content {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    justify-content: center;
-    gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  justify-content: center;
+  gap: 10px;
 }
 
 /* Card Styles */
 .dashboard-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: baseline;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    margin: 15px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 15px 0;
 }
 
 /* Header Styles */
 .dashboard-card h3 {
-    margin-bottom: 15px;
-    font-size: 1.4em;
-    font-weight: 600;
-    text-align: center;
+  margin-bottom: 15px;
+  font-size: 1.4em;
+  font-weight: 600;
+  text-align: center;
 }
 
 /* Paragraph Styles */
 .dashboard-card p {
-    font-size: 1.3em;
-    font-weight: 700;
-    margin: 0;
-    text-align: center;
+  font-size: 1.3em;
+  font-weight: 700;
+  margin: 0;
+  text-align: center;
 }
 
 /* List Styles */
 .dashboard-card ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
 .dashboard-card li {
-    display: flex; /* Enable Flexbox */
-    justify-content: space-between; /* Space between left and right spans */
-    padding: 5px 0;
-    font-size: 1em;
+  display: flex; /* Enable Flexbox */
+  justify-content: space-between; /* Space between left and right spans */
+  padding: 5px 0;
+  font-size: 1em;
 }
 
 /* Button Styles */
 .button {
-    display: inline-block;
-    padding: 10px 15px;
-    background-color: #007bff;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s;
+  display: inline-block;
+  padding: 10px 15px;
+  background-color: #007bff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
 }
 
 .button:hover {
-    background-color: #0056b3;
+  background-color: #0056b3;
 }
 
 /* Chart Styles */
 .dashboard-chart {
-    margin-top: 20px;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 /* User Management and Category Management Styles */
 .user-main-content,
 .category-main-content {
-    background-color: #ffffff;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    min-height: 82.2vh;
+  background-color: #ffffff;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  min-height: 82.2vh;
 }
 
 /* Table Styles */
 table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 20px auto;
+  width: 100%;
+  border-collapse: collapse;
+  margin: 20px auto;
 }
 
 th,
 td {
-    border: 1px solid #dee2e6;
-    padding: 10px;
-    text-align: center;
+  border: 1px solid #dee2e6;
+  padding: 10px;
+  text-align: center;
 }
 
 th {
-    background-color: #007bff;
-    color: white;
+  background-color: #007bff;
+  color: white;
 }
 
 /* Form Styles */
 .form-group {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .form-group label {
-    display: block;
-    margin-bottom: 5px;
+  display: block;
+  margin-bottom: 5px;
 }
 
 .form-group input,
 .form-group select {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ced4da;
-    border-radius: 4px;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
 }
 
 .img-upload {
-    width: 440px;
-    height: auto;
-    object-fit: cover;
+  width: 440px;
+  height: auto;
+  object-fit: cover;
 }
 
 .img-cropped {
-    width: 200px;
-    height: auto;
-    object-fit: cover;
+  width: 200px;
+  height: auto;
+  object-fit: cover;
 }
 
 .btn a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 /* add product  */
 
 .error-message {
-    color: red;
+  color: red;
 }
 
 .thumbnails-container {
-    display: flex;
-    overflow-x: auto;
+  display: flex;
+  overflow-x: auto;
 }
 
 /* Thumbnail container styling */
 .thumbnail {
-    display: inline-block;
-    margin: 5px;
-    position: relative;
+  display: inline-block;
+  margin: 5px;
+  position: relative;
 }
 
 /* Styling for the image */
 .thumbnail img {
-    width: 100px;
-    /* Set a fixed width for the images */
-    height: 100px;
-    /* Set a fixed height for the images */
-    object-fit: cover;
-    /* Ensures the image covers the container without stretching */
-    border-radius: 5px;
-    /* Optional: add rounded corners */
-    border: 1px solid #ccc;
-    /* Optional: add a border */
+  width: 100px;
+  /* Set a fixed width for the images */
+  height: 100px;
+  /* Set a fixed height for the images */
+  object-fit: cover;
+  /* Ensures the image covers the container without stretching */
+  border-radius: 5px;
+  /* Optional: add rounded corners */
+  border: 1px solid #ccc;
+  /* Optional: add a border */
 }
 
 /* Styling for the remove icon */
 .remove-icon {
-    position: absolute;
-    top: 0;
-    right: 0;
-    cursor: pointer;
-    background-color: rgba(255, 255, 255, 0.7);
-    border-radius: 50%;
-    padding: 3px;
-    font-size: 12px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 50%;
+  padding: 3px;
+  font-size: 12px;
 }
 
 /* Footer Styles */
 .dashboard-footer {
-    background-color: #4b4b4b;
-    color: white;
-    text-align: center;
-    padding: 1px 0;
-    width: 100%;
-    position: relative;
-    bottom: 0;
-
+  background-color: #4b4b4b;
+  color: white;
+  text-align: center;
+  padding: 1px 0;
+  width: 100%;
+  position: relative;
+  bottom: 0;
 }
 
 .thumbnail {
-    width: 100px;
-    height: auto;
-    margin-top: 10px;
-
+  width: 100px;
+  height: auto;
+  margin-top: 10px;
 }
 
 /* pagination styles */
 
 .pagination-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
 }
 
 .pagination-container a,
 .pagination-container .current-page {
-    display: inline-block;
-    padding: 10px 15px;
-    margin: 0 5px;
-    text-decoration: none;
-    border: 1px solid #007bff;
-    color: #007bff;
-    border-radius: 5px;
-    transition: background-color 0.3s, color 0.3s;
+  display: inline-block;
+  padding: 10px 15px;
+  margin: 0 5px;
+  text-decoration: none;
+  border: 1px solid #007bff;
+  color: #007bff;
+  border-radius: 5px;
+  transition:
+    background-color 0.3s,
+    color 0.3s;
 }
 
 .pagination-container a:hover {
-    background-color: #007bff;
-    color: #fff;
+  background-color: #007bff;
+  color: #fff;
 }
 
 .pagination-container .current-page {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: default;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: default;
 }
 
 .pagination-container a:disabled {
-    color: #ccc;
-    pointer-events: none;
+  color: #ccc;
+  pointer-events: none;
 }
-
 
 /* Responsive Styles */
 @media (max-width: 768px) {
-    .sidebar {
-        width: 100%;
-        position: relative;
-        height: auto;
-        padding: 10px 0;
-    }
+  .sidebar {
+    width: 100%;
+    position: relative;
+    height: auto;
+    padding: 10px 0;
+  }
 
-    .wrapper {
-        margin-left: 0;
-        padding: 10px;
-    }
+  .wrapper {
+    margin-left: 0;
+    padding: 10px;
+  }
 
-    .dashboard-header {
-        flex-direction: column;
-        align-items: flex-start;
-    }
+  .dashboard-header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
 .order-product-card {
-    padding: 20px;
-    margin: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    max-width: 20rem;
+  padding: 20px;
+  margin: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  max-width: 20rem;
 }
 
 li {
-    list-style-type: none;
+  list-style-type: none;
 }
