--- a/public/product-styles.css
+++ b/public/product-styles.css
@@ -1,432 +1,423 @@
 .wrapper {
-    display: flex;
-    padding: 20px;
-    margin-top: 70px;
-  }
-  
-  .sidebar {
-    width: 25%;
-    padding: 20px;
-    background-color: #d7d7d7;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    margin-right: 20px;
+  display: flex;
+  padding: 20px;
+  margin-top: 70px;
 }
 
-.sidebar .search-wrapper, .price-filter, .out-of-stock-filter, .category-filter, .sorting-options{
-    margin-bottom: 30px;
+.sidebar {
+  width: 25%;
+  padding: 20px;
+  background-color: #d7d7d7;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  margin-right: 20px;
+}
+
+.sidebar .search-wrapper,
+.price-filter,
+.out-of-stock-filter,
+.category-filter,
+.sorting-options {
+  margin-bottom: 30px;
 }
 
 .sidebar h3 {
-    font-size: 20px;
-    margin-bottom: 15px;
-    color: #333;
-    font-weight: 600;
-    border-bottom: 2px solid #df453e;
-    padding-bottom: 5px;
+  font-size: 20px;
+  margin-bottom: 15px;
+  color: #333;
+  font-weight: 600;
+  border-bottom: 2px solid #df453e;
+  padding-bottom: 5px;
 }
 
 .sidebar input[type="text"] {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 16px;
-    margin-bottom: 10px;
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 16px;
+  margin-bottom: 10px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 .sidebar button {
-    width: 100%;
-    padding: 12px;
-    font-size: 16px;
-    background-color: #df453e;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+  width: 100%;
+  padding: 12px;
+  font-size: 16px;
+  background-color: #df453e;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 .sidebar button:hover {
-    background-color: #c13b32;
+  background-color: #c13b32;
 }
 
-
 .sidebar .out-of-stock-filter label {
-    font-size: 16px;
-    color: #333;
-    display: flex;
-    align-items: center;
-    gap: 10px;
+  font-size: 16px;
+  color: #333;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .sidebar .out-of-stock-filter input {
-    width: 18px;
-    height: 18px;
-    cursor: pointer;
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
 }
 
 .category-filter select,
 .sorting-options select {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: #fff;
-    margin-top: 10px;
-    color: #333;
-    cursor: pointer;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: #fff;
+  margin-top: 10px;
+  color: #333;
+  cursor: pointer;
 }
 
 .sorting-options select {
-    margin-top: 5px;
+  margin-top: 5px;
 }
 
 .sorting-options h3 {
-    margin-bottom: 8px;
-    font-size: 18px;
-    font-weight: 500;
-    color: #444;
+  margin-bottom: 8px;
+  font-size: 18px;
+  font-weight: 500;
+  color: #444;
 }
 
 /* Add spacing and alignment to Search button */
 .sidebar button i {
-    margin-left: 8px;
-    font-size: 14px;
+  margin-left: 8px;
+  font-size: 14px;
 }
 
-  
-  .sidebar .price-filter {
-    margin-bottom: 20px;
-  }
-  
-  .sidebar .price-filter input {
-    width: 100%;
-  }
-   
-  .content-product {
-    width: 75%;
-    background-color: white;
-    padding: 20px;
-  }
-  
-  .content-product h1 {
-    font-family: 'Racing Sans One', sans-serif;
-    font-size: 36px;
-    color: rgb(223, 69, 62);
-  }
-  
-  .content-product .breadcrumbs {
-    margin-bottom: 20px;
-  }
-  
-  .content-product .breadcrumbs a {
-    color: #333;
-  }
-  
-  .content-product .breadcrumbs span {
-    margin: 0 5px;
-    color: #333;
-  }
-  
-  .content-product .products {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 30px;
-    padding: 0;
-  
-  
-  }
-  
-  
-  .content-product a {
-    text-decoration: none;
-  }
-  
-  .content-product .product {
-    width: 100%;
-    margin: 2.5%;
-    text-align: center;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  
-  .content-product .product img {
-    width: 100%;
-    height: auto;
-  }
-  
-  .content-product .product h3 {
-    font-size: 24px;
-    color: #333;
-    font-weight: 500;
-    margin: 10px 0;
-  }
-  
-  .content-product .product h6 {
-    color: #161616;
-    font-weight: 400;
-    margin-bottom: 5px;
-  }
-  
-  .content-product .product p {
-    font-size: 16px;
-    color: #666;
-    margin-bottom: 5px;
-  }
-  
-  
-  
+.sidebar .price-filter {
+  margin-bottom: 20px;
+}
 
-  /***** Product detail page *****/
+.sidebar .price-filter input {
+  width: 100%;
+}
+
+.content-product {
+  width: 75%;
+  background-color: white;
+  padding: 20px;
+}
+
+.content-product h1 {
+  font-family: "Racing Sans One", sans-serif;
+  font-size: 36px;
+  color: rgb(223, 69, 62);
+}
+
+.content-product .breadcrumbs {
+  margin-bottom: 20px;
+}
+
+.content-product .breadcrumbs a {
+  color: #333;
+}
+
+.content-product .breadcrumbs span {
+  margin: 0 5px;
+  color: #333;
+}
+
+.content-product .products {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+  padding: 0;
+}
+
+.content-product a {
+  text-decoration: none;
+}
+
+.content-product .product {
+  width: 100%;
+  margin: 2.5%;
+  text-align: center;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.content-product .product img {
+  width: 100%;
+  height: auto;
+}
+
+.content-product .product h3 {
+  font-size: 24px;
+  color: #333;
+  font-weight: 500;
+  margin: 10px 0;
+}
+
+.content-product .product h6 {
+  color: #161616;
+  font-weight: 400;
+  margin-bottom: 5px;
+}
+
+.content-product .product p {
+  font-size: 16px;
+  color: #666;
+  margin-bottom: 5px;
+}
+
+/***** Product detail page *****/
 
 .detail-content {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    padding-top: 70px;
-  }
-  
-  .pedalist-breadcrumb {
-    padding: 10px;
-    margin-top: 70px;
-    border-radius: 5px;
-  }
-  
-  .price-filter {
-    margin: 20px;
-  }
-  
-  input[type="range"] {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 8px;
-    background: #ddd;
-    outline: none;
-    opacity: 0.7;
-    transition: opacity .2s;
-  }
-  
-  input[type="range"]::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 20px;
-    height: 20px;
-    background: #4CAF50;
-    cursor: pointer;
-  }
-  
-  input[type="range"]::-moz-range-thumb {
-    width: 20px;
-    height: 20px;
-    background: #4CAF50;
-    cursor: pointer;
-  }
-  
-  .pagination {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px 0;
-  }
-  
-  .pagination a {
-    display: inline-block;
-    padding: 10px 15px;
-    margin: 0 5px;
-    background-color: #f0f0f0;
-    color: #333;
-    text-decoration: none;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  
-  .pagination a:hover {
-    background-color: #007bff;
-    color: white;
-  }
-  
-  .pagination a.active {
-    background-color: #007bff;
-    color: white;
-    border: 1px solid #007bff;
-  }
-  
-  .pagination a:disabled {
-    background-color: #e9ecef;
-    color: #6c757d;
-    border: 1px solid #dee2e6;
-    cursor: not-allowed;
-  }
-  
-  .pedalist-product-detail {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    min-height: 80vh;
-  }
-  
-  .pedalist-product-detail ul {
-    list-style: none;
-    padding-left: 0;
-    margin-left: 0;
-  
-  }
-  
-  .pedalist-product-images .main-image {
-    width: 100%;
-    height: auto;
-    border: 1px solid #e0e0e0;
-    border-radius: 5px;
-  }
-  
-  .pedalist-thumbnail img {
-    width: 70px;
-    margin-right: 10px;
-    cursor: pointer;
-    border: 1px solid #ddd;
-  }
-  
-  .pedalist-product-info h2 {
-    font-family: 'Racing Sans One', sans-serif;
-    font-size: 1.75rem;
-    margin-bottom: 10px;
-  }
-  
-  .pedalist-product-info h4 {
-    font-size: 1.1rem;
-    font-weight: 600;
-  }
-  
-  .pedalist-product-info li {
-  
-    margin-bottom: 10px;
-  }
-  .pedalist-product-info .availability{
-    margin-bottom: 20px;
-  }
-  
-  .pedalist-product-info .available {
-    padding: 5px 10px;
-    background-color: green;
-    color: #fff;
-  }
-  
-  .pedalist-product-info .out-of-stock {
-    padding: 5px 10px;
-    background-color: yellow;
-    color: #000;
-  }
-  
-  .pedalist-product-info .discontinued {
-    padding: 5px 10px;
-    background-color: red;
-    color: #fff;
-  }
-  
-  
-  .pedalist-product-info .price {
-    color: #28a745;
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin: 10px 0;
-  }
-  
-  .pedalist-short-desc {
-    font-size: 0.9rem;
-    color: #393b3d;
-  }
-  
-  .pedalist-purchase-options .form-group {
-    margin-bottom: 15px;
-  }
-  
-  .pedalist-add-to-cart {
-    font-weight: 700;
-    color: #fff;
-    width: 100%;
-    padding: 10px;
-  }
-  
-  .pedalist-product-images {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .main-image-container {
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .main-image {
-    width: 100%;
-    height: auto;
-    transition: transform 0.2s ease;
-    cursor: zoom-in;
-  }
-  
-  .main-image-container:hover .main-image {
-    transform: scale(1.5);
-    z-index:10;
-  }
-  
-  .pedalist-thumbnail {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
-  
-  .pedalist-thumbnail-img {
-    cursor: pointer;
-    width: 80px;
-    height: 80px;
-    object-fit: cover;
-    border: 2px solid transparent;
-    transition: border-color 0.3s;
-  }
-  
-  .pedalist-thumbnail-img:hover {
-    border-color: #007bff;
-  }
-  
-  
-  .product-description {
-    font-size: 1.1rem;
-    color: #333;
-    margin: 10px 0;
-    line-height: 1.5;
-    padding: 40px 200px;
-    border-radius: 5px;
-    background-color: #f8f9fa;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    position: relative;
-    width: 100%;
-    min-height: max-content;
-  
-  }
-  .new-arrivals{
-    width: 100%;
-  }
-  
-  .original-price {
-      text-decoration: line-through;
-      color: gray;
-      font-size: 1.1em;
-      font-weight: 600;
-  }
-  
-  .discounted-price {
-      color: red;
-      font-weight: bold;
-      font-size: 1.2em;
-  }
-  
-  /***** End Product detail page *****/
-  
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding-top: 70px;
+}
+
+.pedalist-breadcrumb {
+  padding: 10px;
+  margin-top: 70px;
+  border-radius: 5px;
+}
+
+.price-filter {
+  margin: 20px;
+}
+
+input[type="range"] {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 8px;
+  background: #ddd;
+  outline: none;
+  opacity: 0.7;
+  transition: opacity 0.2s;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background: #4caf50;
+  cursor: pointer;
+}
+
+input[type="range"]::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  background: #4caf50;
+  cursor: pointer;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.pagination a {
+  display: inline-block;
+  padding: 10px 15px;
+  margin: 0 5px;
+  background-color: #f0f0f0;
+  color: #333;
+  text-decoration: none;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  transition:
+    background-color 0.3s,
+    color 0.3s;
+}
+
+.pagination a:hover {
+  background-color: #007bff;
+  color: white;
+}
+
+.pagination a.active {
+  background-color: #007bff;
+  color: white;
+  border: 1px solid #007bff;
+}
+
+.pagination a:disabled {
+  background-color: #e9ecef;
+  color: #6c757d;
+  border: 1px solid #dee2e6;
+  cursor: not-allowed;
+}
+
+.pedalist-product-detail {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  min-height: 80vh;
+}
+
+.pedalist-product-detail ul {
+  list-style: none;
+  padding-left: 0;
+  margin-left: 0;
+}
+
+.pedalist-product-images .main-image {
+  width: 100%;
+  height: auto;
+  border: 1px solid #e0e0e0;
+  border-radius: 5px;
+}
+
+.pedalist-thumbnail img {
+  width: 70px;
+  margin-right: 10px;
+  cursor: pointer;
+  border: 1px solid #ddd;
+}
+
+.pedalist-product-info h2 {
+  font-family: "Racing Sans One", sans-serif;
+  font-size: 1.75rem;
+  margin-bottom: 10px;
+}
+
+.pedalist-product-info h4 {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.pedalist-product-info li {
+  margin-bottom: 10px;
+}
+.pedalist-product-info .availability {
+  margin-bottom: 20px;
+}
+
+.pedalist-product-info .available {
+  padding: 5px 10px;
+  background-color: green;
+  color: #fff;
+}
+
+.pedalist-product-info .out-of-stock {
+  padding: 5px 10px;
+  background-color: yellow;
+  color: #000;
+}
+
+.pedalist-product-info .discontinued {
+  padding: 5px 10px;
+  background-color: red;
+  color: #fff;
+}
+
+.pedalist-product-info .price {
+  color: #28a745;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 10px 0;
+}
+
+.pedalist-short-desc {
+  font-size: 0.9rem;
+  color: #393b3d;
+}
+
+.pedalist-purchase-options .form-group {
+  margin-bottom: 15px;
+}
+
+.pedalist-add-to-cart {
+  font-weight: 700;
+  color: #fff;
+  width: 100%;
+  padding: 10px;
+}
+
+.pedalist-product-images {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main-image-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.main-image {
+  width: 100%;
+  height: auto;
+  transition: transform 0.2s ease;
+  cursor: zoom-in;
+}
+
+.main-image-container:hover .main-image {
+  transform: scale(1.5);
+  z-index: 10;
+}
+
+.pedalist-thumbnail {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.pedalist-thumbnail-img {
+  cursor: pointer;
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border: 2px solid transparent;
+  transition: border-color 0.3s;
+}
+
+.pedalist-thumbnail-img:hover {
+  border-color: #007bff;
+}
+
+.product-description {
+  font-size: 1.1rem;
+  color: #333;
+  margin: 10px 0;
+  line-height: 1.5;
+  padding: 40px 200px;
+  border-radius: 5px;
+  background-color: #f8f9fa;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  position: relative;
+  width: 100%;
+  min-height: max-content;
+}
+.new-arrivals {
+  width: 100%;
+}
+
+.original-price {
+  text-decoration: line-through;
+  color: gray;
+  font-size: 1.1em;
+  font-weight: 600;
+}
+
+.discounted-price {
+  color: red;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+/***** End Product detail page *****/
