--- a/public/profile-styles.css
+++ b/public/profile-styles.css
@@ -1,117 +1,116 @@
 .wrapper {
-    display: flex;
-    padding: 20px;
-    min-height: 60vh;
+  margin-top: 90px;
+  display: flex;
+  padding: 20px;
+  min-height: 60vh;
 }
 
 .user-profile-container {
-    display: flex;
-    flex-grow: 1;
-    gap: 20px;
+  display: flex;
+  flex-grow: 1;
+  gap: 20px;
 }
 
-h1{
-    font-family: 'Racing Sans One', sans-serif;
-    font-size: 48px;
-    align-items: center;
+h1 {
+  font-family: "Racing Sans One", sans-serif;
+  font-size: 48px;
+  align-items: center;
 }
 
-h3{
-    font-weight: 700;
-    font-size: 1.2rem;
-    margin-bottom: 5px;
-    margin-top: 20px;
+h3 {
+  font-weight: 700;
+  font-size: 1.2rem;
+  margin-bottom: 5px;
+  margin-top: 20px;
 }
 
 .user-details {
-    flex: 3;
-    background: #f9f9f9;
-    padding: 10px 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  flex: 3;
+  background: #f9f9f9;
+  padding: 10px 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.user-details .user-info{
-margin-top: 20px;
-width: fit-content;
+.user-details .user-info {
+  margin-top: 20px;
+  width: fit-content;
 }
 
-.user-details .user-info .danger{
-    background-color: red;
-    color: white;
+.user-details .user-info .danger {
+  background-color: red;
+  color: white;
 }
 
-.user-details .user-info .success{
-    background-color: green;
-    color: white;
+.user-details .user-info .success {
+  background-color: green;
+  color: white;
 }
 
-.user-details .user-edit{
-
-    margin-top: -120px;
-    padding-bottom: 10px;
-    display: flex;
-    justify-content: flex-end;
+.user-details .user-edit {
+  margin-top: -120px;
+  padding-bottom: 10px;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .right-sidebar {
-    width: 25%;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  width: 25%;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.user-details p{
-    font-size: 18px;
-    line-height: 1.5;
-    margin-bottom: 20px;
+.user-details p {
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 20px;
 }
 
 .right-sidebar h3 {
-    margin-bottom: 15px;
+  margin-bottom: 15px;
 }
 
 .right-sidebar ul {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 .right-sidebar ul li {
-    margin: 10px 0;
+  margin: 10px 0;
 }
 
 .right-sidebar ul li.selected {
-    font-weight: bold;
-    color: #007bff;
+  font-weight: bold;
+  color: #007bff;
 }
 .error-message {
-    color: red;
-    font-size: 0.9em;
-    margin-top: 5px;
+  color: red;
+  font-size: 0.9em;
+  margin-top: 5px;
 }
 
-.address-card{
-    padding: 20px;
-    margin: 10px;
-    box-shadow: 0   0 10px rgba(0,0,0,0.5);
-    max-width: 20rem;
+.address-card {
+  padding: 20px;
+  margin: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  max-width: 20rem;
 }
-.address-list{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+.address-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
-
 
 .alert {
-    background-color: #f8d7da;      
-    color: #721c24; 
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #f5c6cb; 
-    border-radius: 4px; 
+  background-color: #f8d7da;
+  color: #721c24;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #f5c6cb;
+  border-radius: 4px;
 }
 
-.product-set{
-    padding-bottom: 20px;
+.product-set {
+  padding-bottom: 20px;
 }
