--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -24,6 +24,7 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="signup-styles.css">
 </head>
 
 <body>
