--- a/views/admin/customers.ejs
+++ b/views/admin/customers.ejs
@@ -94,7 +94,7 @@
                                         <% } %>
                                             <% } %>
                                                 <% if (currentPage < totalPages) { %>
-                                                    <a href="?page=<%= currentPage + 1 %>">Next &raquo;</a>
+                                                    <a href="?page=<%= parseInt(currentPage) + 1 %>">Next &raquo;</a>
                                                     <% } %>
                 </div>
 
