--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -17,12 +17,22 @@
     .modal-body {
         height: 70vh;
         padding: 20px;
+        overflow: hidden;
+    }
+    .image-container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     #modalImage {
-    height: 100%; 
-    width: auto;
-    display: block;
-    margin: 0 auto;
+        max-height: 100%;
+        max-width: 100%;
+        width: auto;
+        height: auto;
+        display: block;
+        margin: 0 auto;
     }
 </style>
 
@@ -162,7 +172,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div style="max-width: 100%; height: 70vh;">
+                <div class="image-container">
                     <img id="modalImage" src="" alt="Image to crop">
                 </div>
             </div>
